Fixed category service and tests